update stat font color

--- a/app/assets/stylesheets/site/homepage.scss
+++ b/app/assets/stylesheets/site/homepage.scss
@@ -247,7 +247,8 @@ body {
 .newco__section-3__stat {
   background: transparent;
   box-sizing: border-box;
-  color: $white;
+  // color: $white;
+  color: $black;
   font-family: "Cambon";
   font-size: 25px;
   height: 160px;
