remove module scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,4 +20,5 @@
 @import "site/animations";
 @import "site/homepage";
 @import "site/loading_screen";
+@import "site/careers";
 @import url("https://fonts.googleapis.com/css?family=Biryani:600|Muli&display=swap");
