--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= javascript_pack_tag "application" %>
+    <%= javascript_pack_tag "newco-bundle" %>
   </head>
 
   <body>
