--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag "newco-bundle" %>
-  </head>
-
-  <body>
-    <%= yield %>
-  </body>
+    </head>
+    
+    <body>
+     <%= yield %>
+      <script src="https://boards.greenhouse.io/embed/job_board/js?for=newco"></script>
+    </body>
 </html>
