use navigate instead of link

--- a/app/assets/stylesheets/site/homepage.scss
+++ b/app/assets/stylesheets/site/homepage.scss
@@ -54,6 +54,7 @@ body {
   font-family: "Biryani", sans-serif;
   border-radius: 4px;
   cursor: pointer;
+  border-color: $black;
 }
 .header__button {
   position: absolute;
