--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag "newco-bundle" %>
+    <%= favicon_link_tag asset_path('shapes/shape9.png') %>
+
+
     </head>
     
     <body>
